bugfix: 解决无法引用jdk内部模块的问题